--- a/src/components/NodeVisualiser.css
+++ b/src/components/NodeVisualiser.css
@@ -1,11 +1,9 @@
-
-
-.visualizer {
+.nodevisualizer {
     text-align: center;
     margin-top: 50px;
 }
 
-#valueInput {
+input {
     margin-right: 10px;
     padding: 5px;
 }
